# DotClean

./: .gitignore  README.md  README.rst  pyproject.toml
dotclean/: Date.py  DotClean.py  __main__.py
tests/: test_dotclean.py
